test/integration/bad/missing_dist_suffix/non_existing_distribution_suffix2.stan
data { 
}
model {  
    target += binomial_logit_lcdf(1|0,1);
}
